--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "livewire/livewire": "^2.10"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.10",
         "laravel/sail": "^1.0.1",
